package com.java.bank;

public class Bank {

}
