package com.java.bank;

public class Guichet {
}
