@startuml

title __BANK's Class Diagram__\n

  package  {
    package com.java.bank {
      class Account {
          - id : int
          - solde : double
          ~ isActive : boolean
          ~ isBlocked : boolean
          - creationDate : Date
          - transactionList : ArrayList<Transaction>
          ~ Account()
          ~ Account()
          ~ Account()
          ~ deposit()
          ~ withdraw()
          ~ close()
          ~ block()
          ~ unblock()
          + getId()
          + getSolde()
          + getCreationDate()
          + toString()
          + setId()
          + getTransactionList()
          + setTransactionList()
      }
    }
  }
  

  package  {
    package com.java.bank {
      class Bank {
      }
    }
  }
  

  package  {
    package com.java.bank {
      class BankProgram {
          {static} + main()
      }
    }
  }
  

  package  {
    package com.java.bank {
      class Customer {
          - id : int
          - name : String
          - firstName : String
          - accountList : ArrayList<Account>
          + getId()
          + setId()
          + getName()
          + setName()
          + getFirstName()
          + setFirstName()
      }
    }
  }
  

  package  {
    package com.java.bank {
      class Guichet {
      }
    }
  }
  

  package  {
    package com.java.bank {
      class Transaction {
          - id : int
          - date : Date
          - montant : double
          + Transaction()
          + Transaction()
          + Transaction()
          + getId()
          + setId()
          + getDate()
          + setDate()
          + getMontant()
          + setMontant()
          + getFromAccount()
          + setFromAccount()
          + getToAccount()
          + setToAccount()
      }
    }
  }
  

  Account o-- Customer : customer
  Transaction o-- Account : fromAccount
  Transaction o-- Account : toAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
